--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,7 +6,8 @@
         "string_view": "cpp",
         "format": "cpp",
         "initializer_list": "cpp",
-        "span": "cpp"
+        "span": "cpp",
+        "valarray": "cpp"
     },
     "C_Cpp.default.compilerPath": "F:/C++ compiler/ucrt64/bin/g++.exe"
 }
