--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,7 +7,9 @@
         "format": "cpp",
         "initializer_list": "cpp",
         "span": "cpp",
-        "valarray": "cpp"
+        "valarray": "cpp",
+        "deque": "cpp",
+        "vector": "cpp"
     },
     "C_Cpp.default.compilerPath": "F:/C++ compiler/ucrt64/bin/g++.exe"
 }
